@@ -9,5 +9,7 @@ extern void clear_factors(int nfactors, mpz_t* pfactors[], int* pexponents[]);
 
 extern int moebius(mpz_t n);
 extern int liouville(mpz_t n);
+extern void totient(mpz_t totient, mpz_t n);
+extern void jordan_totient(mpz_t tot, mpz_t n, unsigned long k);
 
 #endif
