@@ -2,11 +2,20 @@ Revision history for Perl module Math::Prime::Util::GMP
 
 0.22 2014-07
 
+    [ADDED]
+
+    - moebius(n[,nhi])                    Moebius function (single or ranged)
+    - liouville(n)                        Liouville function
+    - totient(n)                          Euler's Totient function (single)
+    - jordan_totient(k, n)                Jordan totient
+
+    [OTHER]
+
     - Moved factoring loop out of XS file.
 
     - factor does much better power splitting, similar to MPU 0.38's code:
-      time mpu 'prime_set_config(verbose=>2); use bigint; my $n = next_prime(10**20)**200; say join(" ", map {"[@$_]"} factor_exp($n));'
-      time mpu 'prime_set_config(verbose=>2); use bigint; my $n = next_prime(10**21)**200 * next_prime(10**20)**200; say join(" ", map {"[@$_]"} factor_exp($n));'
+      time mpu 'use bigint; my $n = next_prime(10**20)**200; say join(" ", map {"[@$_]"} factor_exp($n));'
+      time mpu 'use bigint; my $n = next_prime(10**21)**200 * next_prime(10**20)**200; say join(" ", map {"[@$_]"} factor_exp($n));'
 
 
 0.21 2014-06-19
